# FeederSafe

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/processed/: candidate_sites.csv  counterfactuals.csv  coupled_impact.csv  coupling_iterations.csv  feeder_hourly_risk.csv  feeders.csv  nudge_recommendations.csv  site_portfolio.csv  site_results.csv  with_without_signal.csv
src/feedersafe/: __init__.py  config.py  pipeline.py  synthetic_data.py
src/feedersafe.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/feedersafe/coupling/: optimizer.py
src/feedersafe/part_a/: modeling.py
src/feedersafe/part_b/: scoring.py
streamlit_app/: Home.py
streamlit_app/pages/: 1_Feeder_Risk_Map.py  2_Home_Charging_Signature.py  3_Site_Feasibility_Planner.py  4_Coupled_Impact_Analysis.py  5_Scheduling_Nudges.py
